--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,24 @@ section#pageLoad {
 }
 
 /* ======================= SECTION PAGE LOAD ====================== */
+section#pageLoad figure.icon {
+  height: 4em;
+  width: 4em;
+  background-size: cover;
+  background-position: center;
+  margin: 2em auto;
+}
+
+figure#waveIcon.icon {
+  background-image: url("../images/wave_icon.svg");
+}
+
+figure#windIcon.icon {
+  background-image: url("../images/wind_icon.svg");
+}
+
 section#pageLoad h1 {
-  margin: 1em auto;
+  margin: .5em auto 1em;
 }
 
 section#pageLoad h1,
@@ -490,6 +506,18 @@ only screen and (min-width: 769px) and (min-resolution: 2dppx) {
     font-size: 1.3em;
   }
 
+  section#pageLoad figure.icon {
+    margin: .5em auto;
+  }
+
+  #mainBtns p {
+    margin: 0;
+  }
+
+  section#pageLoad h1 {
+    margin: .2em auto .2em;
+  }
+
   section#pageLoad form input[type="text"] {
     margin: 0 auto;
     width: 90%;
@@ -561,5 +589,10 @@ only screen and (min-width: 769px) and (min-resolution: 2dppx) {
 @media only screen and (max-width: 340px) {
   section#pageLoad form {
     width: 100%;
+  }
+  section#pageLoad form label {
+    display: inline-block;
+    font-size: .9em;
+    padding-left: 1em;
   }
 }
