--- a/css/style.css
+++ b/css/style.css
@@ -195,10 +195,11 @@ section#pageLoad p {
 section#pageLoad form {
   display: none;
   width: 18em;
+  padding-bottom: 2em;
 }
 
-section#pageLoad form,
-section#pageLoad a {
+section#pageLoad a,
+section#pageLoad form {
   margin: 0 auto;
 }
 
